# users-dashboard

./: README.md
backend/: app.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a4e452b2789e_add_user_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  mixins.py  user.py
backend/app/schemas/: auth.py  user.py
backend/app/service/: auth_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  users.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/pages/: EditUserDialog.tsx  LoginPages.tsx  UsersPages.tsx
